--- a/IDE/common/src/net/vdombox/ide/common/view/components/windows/resourceBrowserWindow/ListItemNotEmptyContent.mxml
+++ b/IDE/common/src/net/vdombox/ide/common/view/components/windows/resourceBrowserWindow/ListItemNotEmptyContent.mxml
@@ -280,7 +280,7 @@
 												   smoothBitmapContent="true"
 												   cachePolicy="on"
 												   cacheAsBitmap="true"
-												   source="@Embed('assets/spinner.png')"/>
+												   source="@Embed('/assets/spinner.png')"/>
 	</fx:Declarations>
 
 	<s:states>
@@ -339,7 +339,7 @@
 								  mouseEnabled="false"
 								  mouseChildren="false"
 								  mouseFocusEnabled="false"
-								  source="@Embed('assets/magnifier.png')"
+								  source="@Embed('/assets/magnifier.png')"
 								  verticalAlign="middle"
 								  horizontalAlign="center"
 								  smoothBitmapContent="true"/>
