--- a/IDE/common/src/net/vdombox/ide/common/view/skins/windows/ResourcePreviewWindowSkin.mxml
+++ b/IDE/common/src/net/vdombox/ide/common/view/skins/windows/ResourcePreviewWindowSkin.mxml
@@ -74,7 +74,7 @@
 														   smoothBitmapContent="true"
 														   cachePolicy="on"
 														   cacheAsBitmap="true"
-														   source="@Embed('assets/spinner.png')"/>
+														   source="@Embed('/assets/spinner.png')"/>
 			</s:HGroup>
 
 			<s:HGroup width="100%"
