--- a/IDE/core/src/net/vdombox/ide/core/view/components/SaveButton.mxml
+++ b/IDE/core/src/net/vdombox/ide/core/view/components/SaveButton.mxml
@@ -29,8 +29,8 @@
 			  verticalAlign="middle"
 			  paddingLeft="5"
 			  paddingRight="5">
-		<mx:Image source.notsave="@Embed('assets/check_0.png')"
-				  source.save="@Embed('assets/check_1.png')"/>
+		<mx:Image source.notsave="@Embed('/assets/check_0.png')"
+				  source.save="@Embed('/assets/check_1.png')"/>
 
 		<s:Label id="labelDisplay"
 				 textAlign="center"
