--- a/IDE/core/src/net/vdombox/ide/core/view/skins/ComboBoxButtonSkin.mxml
+++ b/IDE/core/src/net/vdombox/ide/core/view/skins/ComboBoxButtonSkin.mxml
@@ -35,7 +35,7 @@
 			  verticalAlign="middle">
 		<mx:Image width="14"
 				  height="11"
-				  source="@Embed('assets/arrow.png')"/>
+				  source="@Embed('/assets/arrow.png')"/>
 	</s:HGroup>
 
 
