git-svn-id: http://svn.vdombox.ru/flextools/trunk@8907 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Events/src/net/vdombox/ide/modules/events/view/components/ActionElement.mxml
+++ b/IDE/Events/src/net/vdombox/ide/modules/events/view/components/ActionElement.mxml
@@ -123,7 +123,7 @@
 				 maxDisplayedLines="1"/>
 	</s:Group>
 
-	<!--<components:ParameterRenderer id="actionRenderer" icon="@Embed('assets/event.png')" width="100%"
+	<!--<components:ParameterRenderer id="actionRenderer" icon="@Embed('/assets/event.png')" width="100%"
 								  title="{ title }" includeInLayout="false"/>-->
 
 	<s:VGroup id="parametersContainer"
