--- a/IDE/Events/src/net/vdombox/ide/modules/events/view/components/BaseItemRenderer.mxml
+++ b/IDE/Events/src/net/vdombox/ide/modules/events/view/components/BaseItemRenderer.mxml
@@ -84,7 +84,7 @@
 
 			<mx:Image height="14"
 					  width="5"
-					  source="@Embed('assets/divider_v.png')"/>
+					  source="@Embed('/assets/divider_v.png')"/>
 
 			<s:HGroup height="22"
 					  width="100%"
