--- a/IDE/Events/src/net/vdombox/ide/modules/events/view/components/Toolset.mxml
+++ b/IDE/Events/src/net/vdombox/ide/modules/events/view/components/Toolset.mxml
@@ -16,7 +16,7 @@
 
 	<components:ToolsetButton id="toolsetButton"
 							  height="100%"
-							  icon="@Embed('assets/events_icon.png')"
+							  icon="@Embed('/assets/events_icon.png')"
 							  label="{ resourceManager.getString( 'Events_General', 'toolset_button_label' ) }"
 							  skinClass="net.vdombox.ide.modules.events.view.skins.ToolsetButtonSkin"/>
 </s:Group>
