git-svn-id: http://svn.vdombox.ru/flextools/trunk@8908 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/ColorPicker.mxml
+++ b/IDE/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/ColorPicker.mxml
@@ -105,7 +105,7 @@
 				bottom="0"
 				visible="false">
 			<s:fill>
-				<s:BitmapFill source="@Embed('assets/empty.png')"
+				<s:BitmapFill source="@Embed('/assets/empty.png')"
 							  fillMode="repeat"/>
 			</s:fill>
 		</s:Rect>
