--- a/IDE/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/itemrenderer/ColorPickerButtonSkin.mxml
+++ b/IDE/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/itemrenderer/ColorPickerButtonSkin.mxml
@@ -19,7 +19,7 @@
 	name=labelDisplay, type=spark.components.supportClasses.TextBase, required=false
 	-->
 
-	<mx:Image source="@Embed('assets/colorpicker.png')"
+	<mx:Image source="@Embed('/assets/colorpicker.png')"
 			  smoothBitmapContent="true"/>
 
 </s:SparkSkin>
