--- a/IDE/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/panels/ToolBoxPanel.mxml
+++ b/IDE/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/panels/ToolBoxPanel.mxml
@@ -210,7 +210,7 @@
 					  verticalAlign="middle"
 					  right="4"
 					  visible="false"
-					  source="@Embed('assets/cross.png')"
+					  source="@Embed('/assets/cross.png')"
 					  mouseDown="cross_mouseDownHandler(event)"/>
 		</s:Group>
 
