--- a/IDE/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/toolbars/TextToolbar.mxml
+++ b/IDE/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/toolbars/TextToolbar.mxml
@@ -518,7 +518,7 @@
 	<controls:ToolbarButton id="weightButton"
 							focusEnabled="false"
 							height="24"
-							icon="@Embed(source='../assets/toolbars/richTextToolbar/icon_bold.png')"
+							icon="@Embed(source='/assets/toolbars/richTextToolbar/icon_bold.png')"
 							styleName="toolbarButton"
 							width="24"
 							click="changeWeight()"
@@ -526,7 +526,7 @@
 
 	<controls:ToolbarButton id="styleButton"
 							height="24"
-							icon="@Embed(source='../assets/toolbars/richTextToolbar/icon_italic.png')"
+							icon="@Embed(source='/assets/toolbars/richTextToolbar/icon_italic.png')"
 							styleName="toolbarButton"
 							width="24"
 							click="changeStyle()"
@@ -535,7 +535,7 @@
 	<controls:ToolbarButton id="decorationButton"
 							focusEnabled="false"
 							height="24"
-							icon="@Embed(source='../assets/toolbars/richTextToolbar/icon_underline.png')"
+							icon="@Embed(source='/assets/toolbars/richTextToolbar/icon_underline.png')"
 							styleName="toolbarButton"
 							width="24"
 							click="changeDecoration()"
@@ -545,7 +545,7 @@
 
 	<controls:ToolbarButton id="leftButton"
 							height="24"
-							icon="@Embed(source='../assets/toolbars/richTextToolbar/icon_left.png')"
+							icon="@Embed(source='/assets/toolbars/richTextToolbar/icon_left.png')"
 							styleName="toolbarButton"
 							width="24"
 							click="changeAlign('left')"
@@ -553,7 +553,7 @@
 
 	<controls:ToolbarButton id="centerButton"
 							height="24"
-							icon="@Embed(source='../assets/toolbars/richTextToolbar/icon_center.png')"
+							icon="@Embed(source='/assets/toolbars/richTextToolbar/icon_center.png')"
 							styleName="toolbarButton"
 							width="24"
 							click="changeAlign('center')"
@@ -561,7 +561,7 @@
 
 	<controls:ToolbarButton id="rightButton"
 							height="24"
-							icon="@Embed(source='../assets/toolbars/richTextToolbar/icon_right.png')"
+							icon="@Embed(source='/assets/toolbars/richTextToolbar/icon_right.png')"
 							styleName="toolbarButton"
 							width="24"
 							click="changeAlign('right')"
