--- a/IDE/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/ColorPickerWindowSkin.mxml
+++ b/IDE/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/ColorPickerWindowSkin.mxml
@@ -166,7 +166,7 @@
 									height="100%"
 									visible="{hostComponent.colorValue == ''}">
 								<s:fill>
-									<s:BitmapFill source="@Embed('assets/empty.png')"
+									<s:BitmapFill source="@Embed('/assets/empty.png')"
 												  fillMode="repeat"/>
 								</s:fill>
 							</s:Rect>
@@ -183,7 +183,7 @@
 									height="100%"
 									visible="{hostComponent.oldColorValue == ''}">
 								<s:fill>
-									<s:BitmapFill source="@Embed('assets/empty.png')"
+									<s:BitmapFill source="@Embed('/assets/empty.png')"
 												  fillMode="repeat"/>
 								</s:fill>
 							</s:Rect>
