--- a/IDE/DB/src/net/vdombox/ide/modules/dataBase/view/components/Thumbnail.mxml
+++ b/IDE/DB/src/net/vdombox/ide/modules/dataBase/view/components/Thumbnail.mxml
@@ -14,7 +14,7 @@
 
 			import spark.filters.DropShadowFilter;
 
-			[Embed( source = "assets/rect.png", scaleGridTop = "10", scaleGridBottom = "70", scaleGridLeft = "10", scaleGridRight = "70" )]
+			[Embed( source = "/assets/rect.png", scaleGridTop = "10", scaleGridBottom = "70", scaleGridLeft = "10", scaleGridRight = "70" )]
 			[Bindable]
 			public var thumb : Class;
 
