git-svn-id: http://svn.vdombox.ru/flextools/trunk@8913 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Scripts/src/net/vdombox/ide/modules/scripts/view/components/ListItemRenderer.mxml
+++ b/IDE/Scripts/src/net/vdombox/ide/modules/scripts/view/components/ListItemRenderer.mxml
@@ -31,7 +31,7 @@
 				if ( !contextMenu )
 					contextMenu = new ContextMenu();
 
-				contextMenu.removeAllItems();
+//				contextMenu.removeAllItems();
 
 				if ( value && value is ServerActionVO )
 				{
@@ -42,12 +42,12 @@
 
 					renameItem = new ContextMenuItem( "Rename" );
 					renameItem.addEventListener( Event.SELECT, renameContextMenuHandler, false, 0, true );
-					contextMenu.addItem( renameItem );
+//					contextMenu.addItem( renameItem );
 				}
 
 				deleteItem = new ContextMenuItem( "Delete" );
 				deleteItem.addEventListener( Event.SELECT, deleteContextMenuHandler, false, 0, true );
-				contextMenu.addItem( deleteItem );
+//				contextMenu.addItem( deleteItem );
 			}
 
 			private function renameContextMenuHandler( event : Event ) : void
