--- a/IDE/Scripts/src/net/vdombox/ide/modules/scripts/view/components/TabsPanelItemRenderer.mxml
+++ b/IDE/Scripts/src/net/vdombox/ide/modules/scripts/view/components/TabsPanelItemRenderer.mxml
@@ -115,7 +115,7 @@
 			  right="7"
 			  height="100%"
 			  verticalAlign="middle"
-			  source="@Embed('assets/Close.png')"
+			  source="@Embed('/assets/Close.png')"
 			  visible="false"
 			  click="image1_clickHandler(event)"/>
 
