git-svn-id: http://svn.vdombox.ru/flextools/trunk@8914 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Tree/src/net/vdombox/ide/modules/tree/view/components/ResourceSelector.mxml
+++ b/IDE/Tree/src/net/vdombox/ide/modules/tree/view/components/ResourceSelector.mxml
@@ -66,7 +66,7 @@
 
 		</s:Ellipse>
 
-		<components:SmoothImage height="9" source="@Embed('assets/delete.png')" width="9"
+		<components:SmoothImage height="9" source="@Embed('/assets/delete.png')" width="9"
 								horizontalCenter="0" verticalCenter="0"/>
 
 	</s:Group>-->
